exports[`test renders form 1`] = `
<div
  className="main container">
  <div
    className="center-block row">
    <div
      className="col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
      <img
        alt="data.world sparkle logo"
        className="header-image"
        src="new-sparkle-logo.png" />
      <h2
        className="header">
        Add a data source from data.world
      </h2>
      <form
        onSubmit={[Function]}>
        <div
          className="form-group">
          <label
            className="control-label"
            htmlFor={undefined}>
            Dataset
          </label>
          <span
            className="input-group">
            <input
              autoFocus={true}
              className="form-control"
              id={undefined}
              onChange={[Function]}
              placeholder="http://data.world/jonloyens/an-intro-to-dataworld-dataset"
              type="text"
              value="" />
          </span>
          <span
            className="help-block">
            Copy and paste the dataset URL here
          </span>
        </div>
        <button
          className="center-block btn btn-primary"
          disabled={true}
          type="submit">
          Submit
        </button>
        <div
          className="footer">
          <a
            href="https://datadotworld.zendesk.com/hc/en-us/articles/115010298907-Tableau-Web-Data-Connector"
            onClick={[Function]}
            target="_blank">
            Learn more about the data.world connector
          </a>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`test renders form with default values 1`] = `
<div
  className="main container">
  <div
    className="center-block row">
    <div
      className="col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
      <img
        alt="data.world sparkle logo"
        className="header-image"
        src="new-sparkle-logo.png" />
      <h2
        className="header">
        Add a data source from data.world
      </h2>
      <form
        onSubmit={[Function]}>
        <div
          className="form-group has-success">
          <label
            className="control-label"
            htmlFor={undefined}>
            Dataset
          </label>
          <span
            className="input-group">
            <input
              autoFocus={true}
              className="form-control"
              id={undefined}
              onChange={[Function]}
              placeholder="http://data.world/jonloyens/an-intro-to-dataworld-dataset"
              type="text"
              value="https://data.world/test/test" />
          </span>
          <span
            className="help-block">
            Dataset URL valid
          </span>
        </div>
        <button
          className="center-block btn btn-primary"
          disabled={false}
          type="submit">
          Submit
        </button>
        <div
          className="footer">
          <a
            href="https://datadotworld.zendesk.com/hc/en-us/articles/115010298907-Tableau-Web-Data-Connector"
            onClick={[Function]}
            target="_blank">
            Learn more about the data.world connector
          </a>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`test renders form with query input, sparql selected 1`] = `
<div
  className="query main container">
  <div
    className="center-block row">
    <div
      className="col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
      <img
        alt="data.world sparkle logo"
        className="header-image"
        src="new-sparkle-logo.png" />
      <h2
        className="header">
        Add a data source from data.world
      </h2>
      <form
        onSubmit={[Function]}>
        <div
          className="form-group has-success">
          <label
            className="control-label"
            htmlFor={undefined}>
            Dataset
          </label>
          <span
            className="input-group">
            <input
              autoFocus={true}
              className="form-control"
              id={undefined}
              onChange={[Function]}
              placeholder="http://data.world/jonloyens/an-intro-to-dataworld-dataset"
              type="text"
              value="https://data.world/test/test" />
          </span>
          <span
            className="help-block">
            Dataset URL valid
          </span>
        </div>
        <div>
          <div
            className="form-group">
            <label
              className="control-label"
              htmlFor={undefined}>
              Query Type
            </label>
            <span
              className="input-group">
              <select
                className="form-control"
                id={undefined}
                onChange={[Function]}
                placeholder="Select"
                type={undefined}
                value="sparql">
                <option
                  value="sql">
                  SQL
                </option>
                <option
                  value="sparql">
                  SPARQL
                </option>
              </select>
            </span>
          </div>
          <div
            className="form-group">
            <label
              className="control-label"
              htmlFor={undefined}>
              Query
            </label>
            <span
              className="input-group">
              <textarea
                className="form-control"
                id={undefined}
                onChange={[Function]}
                placeholder="SELECT * FROM TABLE_NAME"
                type={undefined}
                value="example sparql query" />
            </span>
          </div>
        </div>
        <button
          className="center-block btn btn-primary"
          disabled={false}
          type="submit">
          Submit
        </button>
        <div
          className="footer">
          <a
            href="https://datadotworld.zendesk.com/hc/en-us/articles/115010298907-Tableau-Web-Data-Connector"
            onClick={[Function]}
            target="_blank">
            Learn more about the data.world connector
          </a>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`test renders form with query input, sql selected 1`] = `
<div
  className="query main container">
  <div
    className="center-block row">
    <div
      className="col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
      <img
        alt="data.world sparkle logo"
        className="header-image"
        src="new-sparkle-logo.png" />
      <h2
        className="header">
        Add a data source from data.world
      </h2>
      <form
        onSubmit={[Function]}>
        <div
          className="form-group has-success">
          <label
            className="control-label"
            htmlFor={undefined}>
            Dataset
          </label>
          <span
            className="input-group">
            <input
              autoFocus={true}
              className="form-control"
              id={undefined}
              onChange={[Function]}
              placeholder="http://data.world/jonloyens/an-intro-to-dataworld-dataset"
              type="text"
              value="https://data.world/test/test" />
          </span>
          <span
            className="help-block">
            Dataset URL valid
          </span>
        </div>
        <div>
          <div
            className="form-group">
            <label
              className="control-label"
              htmlFor={undefined}>
              Query Type
            </label>
            <span
              className="input-group">
              <select
                className="form-control"
                id={undefined}
                onChange={[Function]}
                placeholder="Select"
                type={undefined}
                value="sql">
                <option
                  value="sql">
                  SQL
                </option>
                <option
                  value="sparql">
                  SPARQL
                </option>
              </select>
            </span>
          </div>
          <div
            className="form-group">
            <label
              className="control-label"
              htmlFor={undefined}>
              Query
            </label>
            <span
              className="input-group">
              <textarea
                className="form-control"
                id={undefined}
                onChange={[Function]}
                placeholder="SELECT * FROM TABLE_NAME"
                type={undefined}
                value="example sql query" />
            </span>
          </div>
        </div>
        <button
          className="center-block btn btn-primary"
          disabled={false}
          type="submit">
          Submit
        </button>
        <div
          className="footer">
          <a
            href="https://datadotworld.zendesk.com/hc/en-us/articles/115010298907-Tableau-Web-Data-Connector"
            onClick={[Function]}
            target="_blank">
            Learn more about the data.world connector
          </a>
        </div>
      </form>
    </div>
  </div>
</div>
`;
